# kontrolilo

./: .codeclimate.yml  .gitignore  .kontrolilo.yaml  .license-check.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  go.mod  go.sum  index.html  index.json  index.xml  main.go  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.py.old  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml  pull-request-lint.yml  pull-request.yml  release-on-main.yml
categories/: index.html  index.xml
cmd/: lint.go  root.go
configuration/: index.html  index.xml
contributing/: index.html  index.xml
credits/: index.html
docs/: config.toml
docs/content/: _index.en.md  credits.en.md  showcase.en.md
examples/: license-check-node.yaml
examples/npm/: .license-check.yaml  package-lock.json  package.json
examples/pipenv/: .license-check.yaml
license_checks/: base_checker.py  configuration.py  license_check_pipenv.py  npm.py  pipenv.py
old/: Pipfile  setup.py
pre_commit_hooks/: README.md  license_check.py  license_check_pipenv.py
showcase/: index.html
src/kontrolilo/: base_checker.py  gradle.py  maven.py  npm.py  pipenv.py  shared_main.py  yarn.py
tags/: index.html  index.xml
test/: kontrolilo.yaml
tests/: test_base_check.py  test_configuration.py  test_license_check.py  test_license_check_pipenv.py  test_npm.py  test_package.py  test_pipenv.py  util.py
usage/: index.html  index.xml
(+72 files in other folders)
